--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/app/src/main/res/values/google_maps_api.xml
+/app/src/release
+/app/src/debug
 .DS_Store
 /build
 /captures
